// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image List 1`] = `
<ul
  className="imageList"
>
  <li
    className="imageListItem"
  >
    <img
      className="imageListImage"
      src="works\\\\absphoto\\\\002_roppongi.jpg"
    />
  </li>
  <li
    className="imageListItem"
  >
    <img
      className="imageListImage"
      src="works\\\\absphoto\\\\001_maru2.jpg"
    />
  </li>
  <li
    className="imageListItem"
  >
    <img
      className="imageListImage"
      src="works\\\\absphoto\\\\000_maru.jpg"
    />
  </li>
  <li
    className="imageListItem"
  >
    <img
      className="imageListImage"
      src="works\\\\absphoto\\\\010_abs004.jpg"
    />
  </li>
</ul>
`;

exports[`Image List Item 1`] = `
<li
  className="imageListItem"
>
  <img
    className="imageListImage"
    src="works\\\\absphoto\\\\010_abs004.jpg"
  />
</li>
`;
